tests/enum_from/compile_fail/container/derive_on_struct.rs
use enum_convert::EnumFrom;

enum Source {
    Unit,
}

#[derive(EnumFrom)] // Should only work on enums
#[enum_from(Source)]
struct Target {
    field: i32,
}

fn main() {}
